# libjsqlite-spatialite-android

./: README.md
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-4.2.0-rc2/src/: Makefile  Makefile.am  rl2ascii.c  rl2dbms.c  rl2gif.c  rl2raw.c  rl2sql.c  rl2svgaux.c  rl2svgxml.c  rl2tiff.c  rl2wms.c
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-4.2.1-rc2/: Doxyfile  Makefile  Makefile.am  README  config.h
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-4.2.1-rc2/examples/: Makefile.am
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-4.2.1-rc2/headers/: Makefile  rasterlite2_private.h
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-4.2.1-rc2/src/: rl2ascii.c  rl2auxrender.c  rl2codec.c  rl2dbms.c  rl2gif.c  rl2import.c  rl2paint.c  rl2pyramid.c  rl2rastersym.c  rl2sql.c  rl2sqlaux.c  rl2wms.c
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-4.2.1-rc2/test/: Makefile  gray_normalize2.xml  ir_gray_gamma.xml  raster_symbolizer_3.xml  raster_symbolizer_5.xml  test1.c  test10.c  test20.c  test4.c  test_gif.c  test_load_wms.c  test_map_ascii.c  test_map_gray.c  test_map_indiana.c  test_map_nile_8.c  test_map_nile_dbl.c  test_map_nile_flt.c  test_map_nile_u32.c  test_map_noref.c  test_map_trento.c  test_palette.c  test_raster.c  test_raw.c  test_webp.c  test_wr_tiff.c
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-4.2.1-rc2/tools/: Makefile  Makefile.am  Makefile.in  rl2sniff.c
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-4.2.1/test/: Makefile  Makefile.am  Makefile.in  asprintf4win.h  check_sql_stmt.c  group_style_2.xml  ir_false_color2_gamma.xml  ir_gray.xml  mono4s.tif  mono4t.tif  plt-striped.tif  raster_symbolizer_4.xml  raster_symbolizer_5.xml  raster_symbolizer_6.xml  srtm_brightness.xml  srtm_categ.xml  test1.c  test11.c  test12.c  test14.c  test16.c  test17.c  test18.c  test2.c  test20.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c  test_coverage.c  test_gif.c  test_load_wms.c  test_map_ascii.c  test_map_gray.c  test_map_indiana.c  test_map_infrared.c  test_map_mono.c  test_map_nile_32.c  (+24 more)
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-4.3.0-rc0/: AUTHORS  Makefile  Makefile.am  Makefile.in  _FOSSIL_  config.h  config.status  configure  libtool
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-4.3.0-rc0/headers/: Makefile.in
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-4.3.0-rc0/src/: Makefile  Makefile.am  rasterlite2.c  rl2auxgeom.c  rl2auxrender.c  rl2charls.c  rl2codec.c  rl2dbms.c  rl2import.c  rl2pyramid.c  rl2raw.c  rl2sql.c  rl2sqlaux.c
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-4.3.0-rc0/test/: Makefile  gray_gamma.xml  ndvi.xml  srtm_interp.xml  test_copy_rastercov.c  test_line_symbolizer.c  test_map_infrared.c  test_map_mono.c  test_map_nile_flt.c  test_map_nile_u32.c  test_map_nile_u8.c  test_map_orbetello.c  test_map_srtm.c  test_map_trento.c  test_paint.c  test_wms1.c
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-4.3.0-rc0/tools/: Makefile.am  Makefile.in  rl2tool.c  wmslite.c
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-4.5.0/src/: Makefile  Makefile.am  Makefile.in  md5.c  rasterlite2.c  rl2_internal_data.c  rl2auxfont.c  rl2auxgeom.c  rl2auxrender.c  rl2codec.c  rl2openjpeg.c  rl2paint.c  rl2pyramid.c  rl2sql.c  rl2sqlaux.c  rl2symbaux.c  rl2symclone.c  rl2tiff.c  rl2wms.c
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-5.0.0/: Doxyfile  Makefile  Makefile-static-MinGW  Makefile-static-mingw32  Makefile-static-mingw64  Makefile.am  Makefile.in  _FOSSIL_  config.h  config.h.in  config.status  configure  configure.ac  libtool  rasterlite2.pc
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-5.0.0/examples/: Makefile  Makefile.am  Makefile.in  sample1.c
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-5.0.0/headers/: Makefile  Makefile.in  rasterlite2_private.h
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-5.0.0/src/: Makefile  Makefile.am  Makefile.in  rasterlite2.c  rl2_internal_data.c  rl2auxgeom.c  rl2auxrender.c  rl2charls.c  rl2codec.c  rl2dbms.c  rl2import.c  rl2jpeg.c  rl2openjpeg.c  rl2paint.c  rl2png.c  rl2pyramid.c  rl2rastersym.c  rl2sql.c  rl2sqlaux.c  rl2svgaux.c  rl2svgxml.c  rl2symbaux.c  rl2symbolizer.c  rl2tiff.c  rl2version.c  rl2webp.c  rl2wms.c
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-5.0.0/test/: Makefile  Makefile.am  Makefile.in  ir_false_color1.xml  raster_symbolizer_5.xml  raster_symbolizer_6.xml  rgb-striped.tif  srtm_relief_75.xml  test10.c  test11.c  test16.c  test2.c  test4.c  test5.c  test_coverage.c  test_font.c  test_load_wms.c  test_map_ascii.c  test_map_indiana.c  test_map_infrared.c  test_map_mono.c  test_map_nile_32.c  test_map_nile_8.c  test_map_noref.c  test_map_orbetello.c  test_map_rgb.c  test_map_srtm.c  test_map_trento.c  test_map_trieste.c  test_map_vector.c  test_point_symbolizer.c  test_text_symbolizer.c  test_tifin.c  test_tile_callback.c  test_vectors.c  test_wms1.c  test_wms2.c
libjsqlite-spatialite-android/spatialite-android-library/jni/librasterlite2-5.0.0/tools/: Makefile  Makefile.am  Makefile.in  rl2sniff.c  rl2tool.c  wmslite.c
libjsqlite-spatialite-android/spatialite-android-library/jni/libspatialite-4.0.0/: Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  config-msvc.h  config.h  config.h.in  config.status  configure  configure.ac  libtool  makefile.vc  nmake.opt  spatialite-sql-latest.html  spatialite.pc  spatialite.pc.in
libjsqlite-spatialite-android/spatialite-android-library/jni/rttopo-master-20151215/: .gitignore  .gitlab-ci.yml  Makefile  README.md  README.topo  Version.config  aclocal.m4  configure.ac
(+9022 files in other folders)
