AM_CFLAGS = @LIBPNG_CFLAGS@ @LIBWEBP_CFLAGS@ @LIBLZMA_CFLAGS@ \
	@LIBSPATIALITE_CFLAGS@ @LIBCAIRO_CFLAGS@ @LIBCURL_CFLAGS@ \
	@LIBXML2_CFLAGS@ @LIBFREETYPE2_CFLAGS@
AM_LDFLAGS = -L../src 

bin_PROGRAMS = rl2sniff rl2tool wmslite

AM_CPPFLAGS = @CFLAGS@
AM_CPPFLAGS += -I$(top_srcdir)/headers

rl2sniff_SOURCES = rl2sniff.c

rl2tool_SOURCES = rl2tool.c

wmslite_SOURCES = wmslite.c

rl2sniff_LDADD = @LIBPNG_LIBS@ @LIBWEBP_LIBS@ @LIBLZMA_LIBS@ \
	@LIBSPATIALITE_LIBS@ @LIBCAIRO_LIBS@ @LIBCURL_LIBS@ \
	@LIBXML2_LIBS@ @LIBFREETYPE2_LIBS@ \
	-lrasterlite2 
	
rl2tool_LDADD = @LIBPNG_LIBS@ @LIBWEBP_LIBS@ @LIBLZMA_LIBS@ \
	@LIBSPATIALITE_LIBS@ @LIBCAIRO_LIBS@ @LIBCURL_LIBS@ \
	@LIBXML2_LIBS@ @LIBFREETYPE2_LIBS@ \
	-lrasterlite2 

if MINGW
wmslite_LDADD = @LIBPNG_LIBS@ @LIBWEBP_LIBS@ @LIBLZMA_LIBS@ \
	@LIBSPATIALITE_LIBS@ @LIBCAIRO_LIBS@ @LIBCURL_LIBS@ \
	@LIBXML2_LIBS@ \
	-lrasterlite2 -lws2_32
else
wmslite_LDADD = @LIBPNG_LIBS@ @LIBWEBP_LIBS@ @LIBLZMA_LIBS@ \
	@LIBSPATIALITE_LIBS@ @LIBCAIRO_LIBS@ @LIBCURL_LIBS@ \
	@LIBXML2_LIBS@ @LIBFREETYPE2_LIBS@ \
	-lrasterlite2 
endif


